test/errors/scan_string.py
x = u "no space after prefix"
y = b "no space after prefix"
y = r "no space after prefix"
