test/errors/scan_string.py.expected
test/errors/scan_string.py:1 error: expected new line, got "no space after prefix"
test/errors/scan_string.py:2 error: expected new line, got "no space after prefix"
test/errors/scan_string.py:3 error: expected new line, got "no space after prefix"
